2003-07-03  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/lily.scm: remove reduce-no-unit 
	(list-insert-separator): use fold-right

	* lily/molecule-scheme.cc (ly_molecule_add): take variable number
	of arguments. 

	* NEWS: more neutral language for ancient notation 

	* lily/chord-tremolo-engraver.cc (acknowledge_grob): only set
	inside pointing beaming for chord tremolo.

	* Documentation/user/lilypond-book.itely: minor editing

2003-07-03  Juergen Reuter  <reuter@ipd.uka.de>

	* NEWS: added news for 1.8 regarding ancient notation

	* Documentation/user/refman.itely (Gregorian square neumes
	ligatures): fixed typo

	* lily/vaticana-ligature-engraver.cc,
	lily/include/vaticana-ligature.hh: bugfix: use special heads for
	lower/upper head of Pes only when heads are stacked

	* lily/vaticana-ligature-engraver.cc, lily/vaticana-ligature.cc,
	scm/define-grob-properties.scm: cleanup: make "join-left" a
	boolean grob property and save delta pitch in grob property
	"delta-pitch" instead

	* lily/include/gregorian-ligature.hh: bugfix: corrected comments

2003-07-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy (Repeated_music): bug fix beam multiplicity was
	completely borked 

	* lily/chord-tremolo-engraver.cc (try_music): warnings for user-errors.
	(try_music): bug fix: beam multiplicity was completely borked.

	* scm/lily.scm: remove tail, filter-list, filter-out-list,
	first-n, butfirst-n in favor of srfi-1 functions.
	remove string-join, string-pad in favor of srfi-13 functions.

	* mf/parmesan-custodes.mf (dir_down): remove _ from glyph names.

	* NEWS: use complete sentences.

	* Documentation/user/introduction.itely (Example applications):
	add note about databases and lilypond-book.

	* input/test/volta.ly: remove file

	* input/regression/volta-broken-left-edge.ly: simplify file

2003-07-01  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Constructing a tweak): new
	subsection.
